src/snapshots/meshb__mail_parser__tests__start_gno_section_should_work-2.snap
---
source: src/mail_parser.rs
expression: "start_gno_section(\"GROUPNO\")"
---
Err(
    Error(
        Base {
            location: "GROUPNO",
            kind: Expected(
                Tag(
                    "GROUP_NO",
                ),
            ),
        },
    ),
)
