src/snapshots/meshb__mail_parser__tests__start_gno_section_should_work.snap
---
source: src/mail_parser.rs
expression: "start_gno_section(\"GROUP_NO\")"
---
Ok(
    (
        "",
        Node,
    ),
)
