src/snapshots/meshb__mail_parser__tests__start_node_section_parser_should_work-2.snap
---
source: src/mail_parser.rs
expression: "start_3d_node_section(\"COORD3D\")"
---
Err(
    Error(
        Base {
            location: "COORD3D",
            kind: Kind(
                Tag,
            ),
        },
    ),
)
