src/snapshots/meshb__mail_parser__tests__useless_line_should_work-3.snap
---
source: src/mail_parser.rs
expression: "useless_line(\"\\n\")"
---
Ok(
    (
        "",
        (),
    ),
)
